# pretty

./: pretty.cabal
bench/: .gitignore  Bench.hs  Makefile  PrettyTestVersion.hs  README.md  pretty-bench.cabal  report.csv  report.html
bench/cases/: README.md  tpdb-test.xml
bench/overwrite/Language/C/: Pretty.hs
bench/overwrite/Text/XML/HaXml/: Pretty.hs
